Modifikasi url homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://panji-utama.github.io",
+  "homepage": "https://panji-utama.github.io/portfolio-react",
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
